<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="20dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/baseline_arrow_back_24"
        tools:ignore="RtlSymmetry" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image"
            app:civ_border_width="2dp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/image_edit"
            android:layout_width="21dp"
            android:layout_height="20dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/edit_pencil"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/eleanor_pena"
            android:textColor="#1A1A1A"
            android:textSize="13sp" />

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="39dp"
            android:progressTint="#FFE071"
            android:rating="3.1"
            android:stepSize="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginTop="36dp"
            android:text="@string/_3_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/_85_reviews"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/phone_number"
            android:inputType="numberDecimal"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="#00966A"
            android:fontFamily="@font/montserrat"
            android:text="@string/save_changes"
            app:cornerRadius="4dp" />

    </LinearLayout>
</LinearLayout>

