<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditProfileAdvanced">

    <ScrollView
        android:layout_width="381dp"
        android:layout_height="607dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="124dp"
                android:layout_height="118dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/image"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailText"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/design_default_color_secondary"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="Email"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="172dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/design_default_color_secondary"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/emailText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="Phone-number"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="172dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pName"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/design_default_color_secondary"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="Name"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="170dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/genderCard"
                android:layout_width="157dp"
                android:layout_height="147dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#D1D3FF"
                app:cardCornerRadius="21dp"
                app:contentPadding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/pName"
                app:layout_constraintTop_toBottomOf="@id/pName">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/cardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Gender"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="17sp" />


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cardText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_gravity="center|left"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="Male"
                            tools:ignore="TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:minHeight="48dp"
                            android:text="Female"
                            tools:ignore="TouchTargetSizeCheck" />

                    </RadioGroup>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="160dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FF7D7D"
                android:orientation="vertical"
                app:cardCornerRadius="21dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/genderCard"
                app:layout_constraintTop_toBottomOf="@id/genderCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/hobbies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center|top"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Hobbies"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/dance"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="Dancing"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/reading"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="@string/reading"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/listening"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="@string/listening"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/playing"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="@string/playing"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/coding"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="@string/coding"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/sleeping"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="@string/sleeping"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="207dp"
                android:layout_height="410dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pName"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pName"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/s_button"
            android:layout_width="342dp"
            android:layout_height="50dp"
            android:backgroundTint="#00966A"
            android:fontFamily="@font/montserrat"
            android:text="Save changes"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>